--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,11 @@
-<html>
-    <head>
-        <title>Cool Page Here</title>
-    </head>
-    <body>
-        <h1>Hello World!</h1>
-        This is my world!
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>COOLPAGEHERE</title>
+</head>
+<body>
+    <h1>Hello, World!</h1>
+</body>
 </html>
