--- a/week2/about_me.html
+++ b/week2/about_me.html
@@ -2,9 +2,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="This is QY's about me page.">
-        <meta name="viewport" content="width=device-width, intial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>assignment 2 cs120</title>
     </head>
+
+
+    <body>
+
+
     <h1>Qihang Yang</h1>
     <p>A trip to Yi State. People are nice, fog is red. Feels unsafe.</p>
     <ul>
@@ -17,8 +22,8 @@
 
         <div style="display: block ">First meal I had in USA, so it's my favourite!</div>
         <div >
-            <img src="week2/donut.jpg" alt="donut" height="200" align="left"> 
-            <div style="margin-bottom: 200;">Donut, you know what I'm talking about!<br>We love yummy donuts! Munchie munchie!</div>
+            <img src="donut.jpg" alt="Dunkin's Famous Donut" height="200" align="left"> 
+            <div style="margin-bottom: 200px;">Donut, you know what I'm talking about!<br>We love yummy donuts! Munchie munchie!</div>
         </div>
     </div>  
     <table>
@@ -26,33 +31,35 @@
             <th>Name</th>
             <th>Image</th>
             <th>Author</th>
-            <th>Summury</th>
+            <th>Summary</th>
         </tr>
         <tr>            
             <td>A Song of Ice and Fire</td>
-            <td><img src="week2/asoiac.jpg" height="50"></td>
+            <td><img src="asoiac.jpg" height="50"></td>
             <td>George R. R. Martin</td>
-            <td>Really story happends in unreal history.</td>
+            <td>Really story happens in unreal history.</td>
         </tr>
         <tr>            
             <td>Lord of the Rings</td>
-            <td><img src="week2/lors.jpg" height="50"></td>
+            <td><img src="lors.jpg" height="50"></td>
             <td>Tolkien</td>
             <td>Praise the goodness of mankind.</td>
         </tr>
         <tr>            
             <td>Siddhartha</td>
-            <td><img src="week2/Siddhartha.jpg" height="50"></td>
+            <td><img src="Siddhartha.jpg" height="50"></td>
             <td>Hermann Hesse</td>
             <td>The Journey itself is what matters.</td>
         </tr>
         <tr>            
             <td>The Untitiled</td>
-            <td><img src="week2/ha.png" height="50"></td>
+            <td><img src="ha.png" height="50"></td>
             <td>John Doe</td>
             <td>Not finished... yet!</td>
         </tr>
     </table>
+
+    </body>
 
 
 </html>
