assignment css solved

--- a/week2/about_me.html
+++ b/week2/about_me.html
@@ -4,6 +4,28 @@
         <meta name="description" content="This is QY's about me page.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>assignment 2 cs120</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+
+        <style>
+            body {
+                font-family: 'Roboto', sans-serif;
+            }
+
+            h1, h2 {
+                color:blueviolet;
+                font-size: 28px;
+                margin-bottom: 30px;
+            }
+
+            ul {
+                border: 5px;
+                
+            }
+        </style>
+
     </head>
 
 
@@ -36,13 +58,11 @@
         <tr>            
             <td>A Song of Ice and Fire</td>
             <td><img src="asoiac.jpg" height="50"></td>
-            <td><img src="asoiac.jpg" height="50"></td>
             <td>George R. R. Martin</td>
-            <td>Really story happens in unreal history.</td>
+            <td>Real story happens in unreal history.</td>
         </tr>
         <tr>            
             <td>Lord of the Rings</td>
-            <td><img src="lors.jpg" height="50"></td>
             <td><img src="lors.jpg" height="50"></td>
             <td>Tolkien</td>
             <td>Praise the goodness of mankind.</td>
@@ -50,13 +70,11 @@
         <tr>            
             <td>Siddhartha</td>
             <td><img src="Siddhartha.jpg" height="50"></td>
-            <td><img src="Siddhartha.jpg" height="50"></td>
             <td>Hermann Hesse</td>
             <td>The Journey itself is what matters.</td>
         </tr>
         <tr>            
             <td>The Untitiled</td>
-            <td><img src="ha.png" height="50"></td>
             <td><img src="ha.png" height="50"></td>
             <td>John Doe</td>
             <td>Not finished... yet!</td>
