--- a/about_me.html
+++ b/about_me.html
@@ -44,7 +44,7 @@
 
         <div style="display: block ">First meal I had in USA, so it's my favourite!</div>
         <div >
-            <img src="donut.jpg" alt="Dunkin's Famous Donut" height="200" align="left"> 
+            <img src="imgs/donut.jpg" alt="Dunkin's Famous Donut" height="200" align="left"> 
             <div style="margin-bottom: 200px;">Donut, you know what I'm talking about!<br>We love yummy donuts! Munchie munchie!</div>
         </div>
     </div>  
@@ -57,25 +57,25 @@
         </tr>
         <tr>            
             <td>A Song of Ice and Fire</td>
-            <td><img src="asoiac.jpg" height="50"></td>
+            <td><img src="imgs/asoiac.jpg" height="50"></td>
             <td>George R. R. Martin</td>
             <td>Real story happens in unreal history.</td>
         </tr>
         <tr>            
             <td>Lord of the Rings</td>
-            <td><img src="lors.jpg" height="50"></td>
+            <td><img src="imgs/lors.jpg" height="50"></td>
             <td>Tolkien</td>
             <td>Praise the goodness of mankind.</td>
         </tr>
         <tr>            
             <td>Siddhartha</td>
-            <td><img src="Siddhartha.jpg" height="50"></td>
+            <td><img src="imgs/Siddhartha.jpg" height="50"></td>
             <td>Hermann Hesse</td>
             <td>The Journey itself is what matters.</td>
         </tr>
         <tr>            
             <td>The Untitiled</td>
-            <td><img src="ha.png" height="50"></td>
+            <td><img src="imgs/ha.png" height="50"></td>
             <td>John Doe</td>
             <td>Not finished... yet!</td>
         </tr>
