--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<html></html>
+<html>
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="This is QY's about me page.">
@@ -9,9 +9,9 @@
     <body>
         <h1>Links!</h1>
 
-        <div><a href="https://vellerrider.github.io/cs120/week2/about_me.html">Assignment 1 Github</a></div>
-        <div><a href="https://vellerrider.github.io/cs120/week2/me_two.html">Assignment 2 CSS</a></div>
-        <div><a href="https://vellerrider.github.io/cs120/week2/project1.html">Project 1</a></div>
+        <div><a href="https://vellerrider.github.io/cs120/about_me.html">Assignment 1 Github</a></div>
+        <div><a href="https://vellerrider.github.io/cs120/me_two.html">Assignment 2 CSS</a></div>
+        <div><a href="https://vellerrider.github.io/cs120/proj1/project1.html">Project 1</a></div>
 
         <div></div>
     </body>
