changed main page name

--- a/proj1/about_us.html
+++ b/proj1/about_us.html
@@ -19,7 +19,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="project1.html">
+                <a class="navbar-brand" href="home.html">
                     <img src="asset/DTZ.png" alt="DTZ Logo">
                 </a>
                 <div class="social-media">
@@ -32,7 +32,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="project1.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="book_event.html">Book Event</a></li>
                         <li class="nav-item"><a class="nav-link" href="about_us.html">About Us</a></li>
                         <li class="nav-item"><a class="nav-link" href="past_events.html">Past Events</a></li>
@@ -51,10 +51,8 @@
     </section>
 
 
-    <main>
-        <section class="first-section">
-            
-            <h2>Our Story</h2>
+
+    <h2>Our Story</h2>
             <div class="info">
                 <p style="font-size: 80%;">
                     DTZ was born in a grimy Boston bar in 2017, when three misfits—Dave, Tony, and Zeke—accidentally started jamming together after the bar’s jukebox died. What began as a spontaneous mess turned into the city’s most chaotic, yet beloved, cover band.
