--- a/proj1/past_events.html
+++ b/proj1/past_events.html
@@ -20,7 +20,7 @@
         <header>
         <nav class="navbar navbar-expand-md navbar-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="project1.html">
+                <a class="navbar-brand" href="home.html">
                     <img src="asset/DTZ.png" alt="DTZ Logo">
                 </a>
                 <div class="social-media">
@@ -33,7 +33,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="project1.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="book_event.html">Book Event</a></li>
                         <li class="nav-item"><a class="nav-link" href="about_us.html">About Us</a></li>
                         <li class="nav-item"><a class="nav-link" href="past_events.html">Past Events</a></li>
