--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 
         <div><a href="https://vellerrider.github.io/cs120/about_me.html">Assignment 1 Github</a></div>
         <div><a href="https://vellerrider.github.io/cs120/me_two.html">Assignment 2 CSS</a></div>
-        <div><a href="https://vellerrider.github.io/cs120/proj1/project1.html">Project 1</a></div>
+        <div><a href="https://vellerrider.github.io/cs120/proj1/home.html">Project 1</a></div>
 
         <div></div>
     </body>
