--- a/proj1/about_us.html
+++ b/proj1/about_us.html
@@ -51,8 +51,10 @@
     </section>
 
 
-
-    <h2>Our Story</h2>
+    <main>
+        <section class="first-section">
+            
+            <h2>Our Story</h2>
             <div class="info">
                 <p style="font-size: 80%;">
                     DTZ was born in a grimy Boston bar in 2017, when three misfits—Dave, Tony, and Zeke—accidentally started jamming together after the bar’s jukebox died. What began as a spontaneous mess turned into the city’s most chaotic, yet beloved, cover band.
